# sly

./: .gitignore  CHANGES.rst  LICENSE  README.rst  pyproject.toml
docs/: conf.py  sly.rst
example/calc/: calc.py
example/calc_ebnf/: calc.py
example/calc_prec/: calc.py
example/conflict/: c.py  calc.py  decl_expr.py  ifelse.py
example/cparsing/: LICENSE  README.rst
example/cparsing/cparsing/: __init__.py  _cluegen.py  _main.py  _typing_compat.py  ast.py  c_ast.py  c_context.py  c_lexer.py  c_parser.py  lexer.py  parser.py  utils.py
example/cparsing/tests/: conftest.py  test_ast.py  test_lexer.py  test_parser.py  test_unparser.py
example/schcls/: schcls.py
example/wasm/: expr.py  wasm.py
src/sly/: __init__.py  _misc.py  _typing.py  ast.py  docparse.py  lex.py  types.py  yacc.py
tests/: test_ebnf.py  test_lex.py  test_parser.py
